# competitive-programming

./: CMakeLists.txt  empty.cpp  main.cpp
AdventOfCode/2023/: 1-trebuchet-part1.cpp  1-trebuchet-part2.cpp
AdventOfCode/2024/: day1-part1-2024.cpp  day1-part2-2024.cpp  day2-part1-2024.cpp  day2-part2-2024.cpp  day3-part1-2024.cpp
Algorithms/: binary-lifiting-LCA.cpp  breadth-first-search.cpp  depth-first-search.cpp  dijkstras.cpp  dsu.cpp  segment-tree.cpp  string-hashing.cpp
AtCoder/: between-two-arrays.cpp  complete-binary-tree.cpp  div-game.cpp  exactly-k-steps.cpp  fennec-vs-snuke.cpp  flip-cards.cpp  frog1.cpp  frog2.cpp  grid1.cpp  i-hate-non-integer-number.cpp  independent-set.cpp  index-times-a.cpp  knapsack1.cpp  knapsack2.cpp  lcs.cpp  longestpath.cpp  max-multiple.cpp  vacation.cpp
BOI/: ancient-manuscript.cpp  bus-trip-estonia.cpp  polygon.cpp
CALICO/: bridge.cpp  caliconstruction.cpp  dreams-apprentice.cpp  fortnite.cpp  gib-neb-perilous-plot.cpp  literally1984.cpp  oreo.cpp  scv.cpp  string-surgery.cpp
COCI/: cezar.cpp  cokolade.cpp  izbori.cpp  papricice.cpp  parametriziran.cpp  sabor.cpp
CSAcademy/: consecutive-max-diff.cpp
CSES/: array-description.cpp  book-shop.cpp  coin-combinations-i.cpp  coin-combinations-ii.cpp  company-queries-ii.cpp  dice-combinations.cpp  distance-queries.cpp  distinct-colors.cpp  dynamic-range-sum-queries.cpp  finding-periods.cpp  grid-paths.cpp  list-removals.cpp  minimizing-coins.cpp  nested-ranges-check.cpp  planets-queries-i.cpp  planets-queries-ii.cpp  removing-digits.cpp  subtree-queries.cpp  tree-distances-I.cpp  tree-distances-II.cpp  tree-matching.cpp
CodeForces/: 2-plus-door.cpp  GCD-sequence.cpp  LCS-on-permuations.cpp  a-BIT-of-a-construction.cpp  ab-flipping.cpp  absolute-beauty.cpp  add-divide-and-floor.cpp  add-modulo-10.cpp  add-zeros.cpp  alices-adventures-in-cards.cpp  alices-adventures-in-chess.cpp  alices-adventures-in-cutting-cake.cpp  alices-adventures-in-permuting.cpp  all-possible-digits.cpp  alternating-string.cpp  anagram.cpp  andrew-and-stones.cpp  andrey-and-escape-from-capygrad.cpp  anji-binary-tree.cpp  another-permutation-problem.cpp  anya-and-1100.cpp  apple-tree.cpp  armchairs.cpp  array-coloring.cpp  array-craft.cpp  array-differentiation.cpp  array-divisibility.cpp  assembly-via-minimums.cpp  attribute-checks.cpp  beautiful-array.cpp  beauty-of-the-mountains.cpp  bessie-and-dominos.cpp  bessie-and-selection.cpp  bessie-birthday-cake.cpp  big-brush.cpp  binary-search.cpp  binary-string-copying.cpp  bitwise-operation-wizard.cpp  black-cells.cpp  boring-day.cpp  (+212 more)
HSCSA/: alex-revolt2.cpp  factoradic-factory.cpp  gunn-and-teammaking.cpp  hihitherethere-magic-square.cpp  jeffery-and-new-years.cpp  lunchbox-and-coins.cpp  pichu-and-pentominoes.cpp  pichu-tetromineos.cpp  qpwoeirut-and-investors.cpp
HSCSA/Contest_5_June_2023/: alex-expo-markers.cpp  pichu-and-triominoes.cpp  ritwin-and-comparisons.cpp
Indigo/: cifjump.cpp  favorite-sequences.cpp
InfoArena/: arbore3.cpp  asmax.cpp  base3.cpp  bitcost.cpp  cablaj.cpp  cuplaje.cpp  grea.cpp  ninjago.cpp  nrsubsecv.cpp  pascal.cpp  ramen.cpp  string.cpp  transport2.cpp
JOI/: advertisement2.cpp
Kilonova/: 23.cpp  ABgraf.cpp  EQ4.cpp  abx.cpp  ace.cpp  anton-would-approve.cpp  aranjare.cpp  arithmetic-equality.cpp  asort.cpp  azugand.cpp  back-to-the-himalayas.cpp  binary-chess.cpp  birocratie.cpp  bolovani.cpp  calancea.cpp  carry-bit.cpp  castel.cpp  catalin-and-binary-sorting.cpp  cave-exploration.cpp  compresie.cpp  conexidad.cpp  copii.in.cpp  crescator.cpp  crocks.cpp  diff.cpp  dragoni.cpp  evip.cpp  expresie.cpp  extrapare.cpp  ezlulu.cpp  fadema.cpp  fata-morgana.cpp  fibosnek.cpp  frequencies.cpp  fsb.cpp  good-intervals.cpp  gregor-max-len.cpp  hill-climb.cpp  insule.cpp  interesant.cpp  (+57 more)
LIT/: buckepotato-fanclub.cpp  hillington.cpp  tree-folding.cpp
MIT2/: collecting-coins.cpp  delete-one-digit.cpp
MetaHackerCup/: line-by-line-in.txt  line-by-line-out.txt  line-by-line.cpp  walk-the-line-in.txt  walk-the-line-out.txt  walk-the-line.cpp
MyProblems/: bit-showdown.cpp  city-skylines-gen.cpp  city-skylines.cpp  lark-and-nightingale-gen.cpp  lark-and-nightingale.cpp  larry-the-lizard.cpp  lucky-sudoku.cpp  squre-or-prime.cpp
OJUZ/: awesome-arrowland-adventure.cpp  foehn-phenomena.cpp  jjooii2.cpp  mean.cpp  subway.cpp  trampoline.cpp
SZKOpul/: double-row.cpp  warehouse-store.cpp
USACO/: 248.cpp  2d-conveyer-belt.cpp  COW-operations.cpp  acowdemia-silver.cpp  balanced-photo.cpp  barnpainting.cpp  berry-picking.cpp  bessies-interview.cpp  bovine-acrobatics.cpp  build-gates.cpp  cake-game.cpp  cbarn.cpp  cbarn2.cpp  censoring-silver.cpp  cereal.cpp  cereal2.cpp  closet-cow-wins.cpp  comfortable-cows.cpp  connecting-two-barns.cpp  convention-ii.cpp  cowlendar.cpp  cowmpetency.cpp  cowpatibility.cpp  cycle-correspondence.cpp  dance-mooves.cpp  deforestation.cpp  dirtraverse.cpp  do-you-know-your-abcs.cpp  email-filing.cpp  find-and-replace.cpp  fine-dining.cpp  flight-routes.cpp  following-directions.cpp  fruit-feast.cpp  guess_the_animal_cpp.cpp  icy-perimeter.cpp  just-green-enough.cpp  lasers-and-mirrors.cpp  leftout.cpp  lifeguards.cpp  (+43 more)
USACOGuide/: balanced-difference.cpp  cheating-the-group-system.cpp  farmer-jon-cities.cpp  producing-digits.cpp  soccer-league.cpp  tri-num-array.cpp  two-way-homework.cpp
